--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8" />
-        <title>Um React - Aplicação Base</title>
+        <title>Portifólios de Projetos Ibmec</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="bundle.js" defer></script>
         <link href="style.css" rel="stylesheet">
 
         <!-- https://redketchup.io/favicon-generator -->
         <link rel="apple-touch-icon" sizes="180x180" href="imagens/icons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="imagens/icons/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="imagens/icons/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="imagens/logo_ibmec.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="imagens/logo_ibmec.png">
         <link rel="manifest" href="site.webmanifest">
         
     </head>
